--- a/css/hero.css
+++ b/css/hero.css
@@ -1,7 +1,6 @@
 body{
     margin: 0;
     background-color:rgb(255, 255, 255);
-    padding: 0;
 }
 
 header{
@@ -22,7 +21,9 @@ header img{
 }
 
 main{
-    padding:0px 20px 20px 20px;
+    padding:0px 30px 20px 30px;
+    margin-left: 35px;
+    margin-right: 180px;
     
 }
 
